add content in html an css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="/script.js"></script>
-    <title>Document</title>
+    <script src="script.js"></script>
+    <title>MY CV</title>
 </head>
 <body>
     
+    <header>
+        <div class="header-box">
+            <div class="my-name">
+                <h1>ISABELL BETAR</h1>
+                <h4>GRAFISK DESIGNER & BLIVANDE FRONTEND UTVECKLARE</h4>
+            </div>
+            <div class="navbar-box"> 
+                <nav>
+                    <ul class="navbar">
+                        <li><a href="#">OM MIG</a></li>
+                        <li><a href="#">ERFARENHETER</a></li>
+                        <li><a href="#">KUNSKAPER</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main>
+        <img src="/imeges/me.jpg" alt="profile img">
+        <div class="aboutme">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus laboriosam harum molestiae quo cum ipsa libero quidem adipisci hic consectetur soluta a eum at, tempore molestias minus optio, voluptatum vel.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus laboriosam harum molestiae quo cum ipsa libero quidem adipisci hic consectetur soluta a eum at, tempore molestias minus optio, voluptatum vel.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus laboriosam harum molestiae quo cum ipsa libero quidem adipisci hic consectetur soluta a eum at, tempore molestias minus optio, voluptatum vel.
+            </p>
+        </div>
+    </main>
+    <footer>
+        <p>
+            Kjellmansgatan 20 414 63 Göteborg
+            isabell.betar@gmail.com
+            072 01 42 103 
+            880708-xxxx
+        </p>
+    </footer>
 </body>
 </html>
