--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
     <main>
         <img src="/imeges/me.jpg" alt="profile img">
         <div class="aboutme">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus laboriosam harum molestiae quo cum ipsa libero quidem adipisci hic consectetur soluta a eum at, tempore molestias minus optio, voluptatum vel.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus laboriosam harum molestiae quo cum ipsa libero quidem adipisci hic consectetur soluta a eum at, tempore molestias minus optio, voluptatum vel.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus laboriosam harum molestiae quo cum ipsa libero quidem adipisci hic consectetur soluta a eum at, tempore molestias minus optio, voluptatum vel.
+            <h3>VEM ÄR JAG</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus laboriosam harum molestiae <br><br> quo cum ipsa libero quidem adipisci hic consectetur soluta a eum at, tempore molestias minus optio, voluptatum vel.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus laboriosam harum molestiae quo cum ipsa libero quidem adipisci hic consectetur soluta a eum at, tempore molestias <br> <br>minus optio, voluptatum vel.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus <br>laboriosam harum molestiae quo cum ipsa libero quidem adipisci hic consectetur soluta a eum at, tempore molestias minus optio, voluptatum vel.
             </p>
         </div>
     </main>
     <footer>
-        <p>
-            Kjellmansgatan 20 414 63 Göteborg
-            isabell.betar@gmail.com
-            072 01 42 103 
-            880708-xxxx
-        </p>
+            <div>Adress: Kjellmansgatan 20 414 63 Göteborg</div> 
+            <div>Email: isabell.betar@gmail.com</div>
+            <div>Mobil: 072 01 42 103</div> 
+            <div class="border"></div>   
+
     </footer>
 </body>
 </html>
