Added content in erfarenheter page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="small.css">
     <script src="script.js"></script>
     <title>MY CV</title>
 </head>
@@ -18,22 +19,27 @@
             <div class="navbar-box"> 
                 <nav>
                     <ul class="navbar">
-                        <li><a href="#">OM MIG</a></li>
-                        <li><a href="#">ERFARENHETER</a></li>
-                        <li><a href="#">KUNSKAPER</a></li>
+                        <li><a href="index.html">HEM</a></li>
+                        <li><a href="erfarenheter.html">ERFARENHETER & KUNSKAPER</a></li>
+                        <!-- <li><a href="#">KUNSKAPER</a></li> -->
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
     <main>
-        <img src="/imeges/me.jpg" alt="profile img">
-        <div class="aboutme">
-            <h3>VEM ÄR JAG</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus laboriosam harum molestiae <br><br> quo cum ipsa libero quidem adipisci hic consectetur soluta a eum at, tempore molestias minus optio, voluptatum vel.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus laboriosam harum molestiae quo cum ipsa libero quidem adipisci hic consectetur soluta a eum at, tempore molestias <br> <br>minus optio, voluptatum vel.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus <br>laboriosam harum molestiae quo cum ipsa libero quidem adipisci hic consectetur soluta a eum at, tempore molestias minus optio, voluptatum vel.
-            </p>
+        <div class="main-content-box">
+            <img src="/imeges/me.jpg" alt="profile img">
+            <div class="aboutme">
+                <h3>VEM ÄR JAG</h3>
+                <p>Isabell är en driven person som har design som stort intresse. Jag är född i Malmö år 1988 av en svensk mamma och libanesisk pappa. <br>
+                    Tillsammans med familjen flyttade vi utomlands där jag slutförde mina studier i grafisk design och jobbade senare som frilansande grafisk designer. <br><br> 
+
+                    Efter följande flyttade jag tillbaka till Sverige, då jag fortsatte studera det svenska språket och jobbade som butikssäljare. 
+                    
+                    
+                </p>
+            </div>
         </div>
     </main>
     <footer>
