--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
     </header>
     <main>
         <div class="main-content-box">
-            <img src="/imeges/me.jpg" alt="profile img">
+            <div class="profile-img">
+                <img src="/imeges/me.jpg" alt="profile img">
+            </div>
+
             <div class="aboutme">
                 <h3>VEM ÄR JAG</h3>
+            
                 <p>Isabell är en driven person som har design som stort intresse. Jag är född i Malmö år 1988 av en svensk mamma och libanesisk pappa. <br>
                     Tillsammans med familjen flyttade vi utomlands där jag slutförde mina studier i grafisk design och jobbade senare som frilansande grafisk designer. <br><br> 
 
@@ -45,6 +49,7 @@
     <footer>
             <div>Adress: Kjellmansgatan 20 414 63 Göteborg</div> 
             <div>Email: isabell.betar@gmail.com</div>
+            <div class="githab"><a href="https://github.com/Isabell88">Besök min githab här </a></div> 
             <div>Mobil: 072 01 42 103</div> 
             <div class="border"></div>   
 
