add mobil menu to html

--- a/erfarenheter.html
+++ b/erfarenheter.html
@@ -135,8 +135,8 @@
                     <h6>2008 - 2011</h6>
                 </div>
                 <div class="utbildning">
-                    <h5>2006 - 2008</h5>
-                    <h6>2011 – 2012</h6>
+                    <h5>Gymnasieutbildning</h5>
+                    <h6>2006 – 2008</h6>
                 </div>
 
                 
@@ -172,7 +172,7 @@
     <footer>
             <div>Adress: Kjellmansgatan 20 414 63 Göteborg</div> 
             <div>Email: isabell.betar@gmail.com</div>
-            <div class="githab"><a href="https://github.com/Isabell88">Githab: Besök min githab här </a></div>
+            <div class="githab"><a href="https://github.com/Isabell88">Githab: Besök min githab här</a></div>
             <div>Mobil: 072 01 42 103</div> 
             <div class="border"></div>   
 
