Edit all content

--- a/erfarenheter.html
+++ b/erfarenheter.html
@@ -17,7 +17,6 @@
     <header>
         <div class="header-box">
             <div class="my-name">
-
                 <h1 id="type-name"></h1>
                 <h4>GRAFISK DESIGNER & BLIVANDE FRONTEND UTVECKLARE</h4>
             </div>
@@ -78,24 +77,25 @@
                         <p>HTML</p>
                         <p>CSS</p>
                         <p>Java skrips</p>
+                        <p>Fotografering</p>
                         <p>Illustrator</p>
                         <p>Photoshop</p>
                         <p>InDesign</p>
                         <p>Flash</p>
-                        <p>Fotografering</p>
+                        
                 </div>
 
                 <div class="intressen-box">
                     <h5>INTRESSEN</h5>
                 
-                        <p>Konst</p>
                         <p>Design</p>
                         <p>Mode</p>
                         <p>Inredning</p>
                         <p>Foto</p>
+                        <p>Konst</p>
                         <p>Träning</p> 
                         <p>Dans</p>
-                        <p>usik</p>      
+                        <p>Musik</p>      
                 </div>
             </div>
 
