--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
             <div class="aboutme">
                 <h3>VEM ÄR JAG</h3>
             
-                <p>Isabell är en driven person som har design som stort intresse. Jag är född i Malmö år 1988 av en svensk mamma och libanesisk pappa. <br>
-                    Tillsammans med familjen flyttade vi utomlands där jag slutförde mina studier i grafisk design och jobbade senare som frilansande grafisk designer. <br><br> 
-
-                    Efter följande flyttade jag tillbaka till Sverige, då jag fortsatte studera det svenska språket och jobbade som butikssäljare.       
+                <p>Jag är en driven person som har design som stort intresse. Jag är född i Malmö år 1988 av en svensk mamma och libanesisk pappa. <br>
+                    Tillsammans med familjen flyttade vi utomlands där jag slutförde mina studier i grafisk design och jobbade som frilansande grafisk designer. <br><br> 
+                    Efter följande flyttade jag tillbaka till Sverige, då jag fortsatte studera det svenska språket och jobbade som butikssäljare.<br><br> 
+                    Nu har jag valt att studera till frontend utvecklare för att öka mina möjligheter på arbetsmarknaden.
                 </p>
             </div>
         </div>
     </main>
 
     <!-- footer content -->
-    
+
     <footer>
             <div>Adress: Kjellmansgatan 20 414 63 Göteborg</div> 
             <div>Email: isabell.betar@gmail.com</div>
